# RsMetaCheck

./: .gitignore  README.md  pyproject.toml
data/examples/: analysis_results_example.json  output_analysis_results.json  output_commit_id.jsonld  output_verbose_example.jsonld
docs/ground_truth/: index.html  summary_pitfalls_warnings.json
results/: summary.json
results/pitfalls/: output_1_pitfalls.jsonld
results/somef/: output_1.json
src/metacheck/: cli.py  detect_pitfalls_main.py  run_somef.py
src/metacheck/scripts/pitfalls/: p002.py  p008.py
src/metacheck/scripts/tests/: test_w003.py  test_w009.py  test_w010.py
src/metacheck/scripts/warnings/: w001.py
src/metacheck/utils/: json_ld_utils.py
src/rsmetacheck/: __init__.py  cli.py  detect_pitfalls_main.py  run_analyzer.py  run_somef.py
src/rsmetacheck/scripts/pitfalls/: p001.py  p003.py  p004.py  p005.py  p006.py  p007.py  p008.py  p009.py  p010.py  p011.py  p012.py  p013.py  p014.py  p015.py  p016.py  p017.py  p018.py  p019.py
src/rsmetacheck/scripts/tests/: log.txt  log_verbose.txt  test_p001.py  test_p002.py  test_p003.py  test_p004.py  test_p005.py  test_p006.py  test_p007.py  test_p008.py  test_p009.py  test_p010.py  test_p011.py  test_p012.py  test_p013.py  test_p014.py  test_p015.py  test_p016.py  test_p017.py  test_p018.py  test_p019.py  test_w001.py  test_w002.py  test_w003.py  test_w004.py  test_w005.py  test_w006.py  test_w007.py  test_w008.py  test_w009.py  test_w010.py
src/rsmetacheck/utils/: json_ld_utils.py  pitfall_utils.py  somef_compat.py
tests/: test_cli.py
(+10 files in other folders)
