[project]
name = "metacheck"
version = "0.2.1"
description = "Detect metadata pitfalls in software repositories"
authors = [{name = "Anas El Hounsri"}]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "requests>=2.31.0",
    "somef>=0.9.13",
]

[project.scripts]
rsmetacheck = "metacheck.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/metacheck"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
