[tool.poetry]
name = "rsmetacheck"
version = "0.3.0"
description = "Detect metadata pitfalls in software repositories"
authors = ["Anas El Hounsri"]
readme = "README.md"
packages = [{include = "rsmetacheck", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "*"
somef = "0.10.1"

[tool.poetry.scripts]
rsmetacheck = "rsmetacheck.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
